refactored,controller updated